--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
                             <encoding>UTF-8</encoding>
                             <docencoding>UTF-8</docencoding>
                             <additionalparam>-Xdoclint:none</additionalparam>
-                            <javadocExecutable>/Library/Java/JavaVirtualMachines/jdk1.8.0_261.jdk/Contents/Home/bin/javadoc</javadocExecutable>
+                            <javadocExecutable>C:\Program Files\Java\jdk1.8.0_333\bin\javadoc</javadocExecutable>
                             <!-- TODO 临时解决不规范的javadoc生成报错,后面要规范化后把这行去掉 -->
                         </configuration>
                         <executions>
