--- a/pom.xml
+++ b/pom.xml
@@ -242,11 +242,13 @@
                 <snapshotRepository>
                     <id>ossrh</id>
                     <name>ossrh</name>
+                    <layout>default </layout>
                     <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
                 </snapshotRepository>
                 <repository>
                     <id>ossrh</id>
                     <name>ossrh</name>
+                    <layout>default </layout>
                     <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                 </repository>
             </distributionManagement>
