--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           java-version: 1.8
           server-id: releases
           # Nexus用户名环境变量
-          server-username: horseLk
+          server-username: MAVEN_USERNAME
           # Nexus密码环境变量
           server-password: MAVEN_CENTRAL_TOKEN
           # gpg短密码环境变量
@@ -33,7 +33,6 @@ jobs:
       - name: Publish to Apache Maven Central
         # 执行maven deploy命令
         run: mvn clean install deploy -P release
-        #        run: mvn clean deploy  -DaltDeploymentRepository=ossrh::default::https://s01.oss.sonatype.org/content/repositories/snapshots/
         env:
           # Nexus用户名,如果觉得不想暴露也可以配置到secrets中
           MAVEN_USERNAME: horseLk
