--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-          server-id: releases
+          server-id: ossrh
           # Nexus用户名环境变量
           server-username: MAVEN_USERNAME
           # Nexus密码环境变量
