--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
                             <encoding>UTF-8</encoding>
                             <docencoding>UTF-8</docencoding>
                             <additionalparam>-Xdoclint:none</additionalparam>
-                            <javadocExecutable>/opt/hostedtoolcache/jdk/8.0.402/x64\bin\javadoc</javadocExecutable>
+                            <javadocExecutable>/opt/hostedtoolcache/jdk/8.0.402/x64/bin/javadoc</javadocExecutable>
                         </configuration>
                         <executions>
                             <execution>
