--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-          server-id: releases
+          server-id: ossrh
           # Nexus用户名环境变量
           server-username: MAVEN_USERNAME
           # Nexus密码环境变量
@@ -29,10 +29,10 @@ jobs:
           # gpg短密码环境变量
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
           # gpg私钥
-          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_SECRET }}
       - name: Publish to Apache Maven Central
         # 执行maven deploy命令
-        run: mvn clean deploy
+        run: mvn clean install deploy -P release
         env:
           # Nexus用户名,如果觉得不想暴露也可以配置到secrets中
           MAVEN_USERNAME: horseLk
